change single quotes to double quotes

--- a/app/views/layouts/_cookie_banner.html.haml
+++ b/app/views/layouts/_cookie_banner.html.haml
@@ -1,5 +1,5 @@
 - unless @cookies_preferences_set
-  .app-cookie-banner.app-cookie-banner.govuk-cookie-banner{"aria-label": "Cookies on View Court Data", role: "region", data: { module: "app-cookie-banner", nosnippet: ""}}
+  .app-cookie-banner.app-cookie-banner.govuk-cookie-banner{'aria-label': 'Cookies on View Court Data', role: 'region', data: { module: 'app-cookie-banner', nosnippet: ''}}
     .govuk-cookie-banner__message.govuk-width-container
       .govuk-grid-row
         .govuk-grid-column-two-thirds
@@ -21,7 +21,7 @@
         = link_to t('layouts.application.cookies.view_cookies'), cookies_settings_path, class: 'govuk-link'
 
 - if @show_confirm_banner
-  .app-cookie-banner.app-cookie-banner.govuk-cookie-banner{"aria-label": "Cookies on View Court Data", role: "region", data: { module: "app-cookie-banner", nosnippet: ""}}
+  .app-cookie-banner.app-cookie-banner.govuk-cookie-banner{'aria-label': 'Cookies on View Court Data', role: 'region', data: { module: 'app-cookie-banner', nosnippet: ''}}
     .govuk-cookie-banner__message.govuk-width-container
       .govuk-grid-row
         .govuk-grid-column-two-thirds
