--- a/app/views/cookies/cookie_details.html.haml
+++ b/app/views/cookies/cookie_details.html.haml
@@ -13,11 +13,11 @@
     = t('cookies.section_necessary.table.caption')
   %thead.govuk-table__head
     %tr.govuk-table__row
-      %th.govuk-table__header{scope: "col"}
+      %th.govuk-table__header{scope: 'col'}
         = t('cookies.section_necessary.table.heading_one')
-      %th.govuk-table__header{scope: "col"}
+      %th.govuk-table__header{scope: 'col'}
         = t('cookies.section_necessary.table.heading_two')
-      %th.govuk-table__header{scope: "col"}
+      %th.govuk-table__header{scope: 'col'}
         = t('cookies.section_necessary.table.heading_three')
   %tbody.govuk-table__body
     %tr.govuk-table__row
@@ -44,11 +44,11 @@
     = t('cookies.section_functional.table.caption')
   %thead.govuk-table__head
     %tr.govuk-table__row
-      %th.govuk-table__header{scope: "col"}
+      %th.govuk-table__header{scope: 'col'}
         = t('cookies.section_functional.table.heading_one')
-      %th.govuk-table__header{scope: "col"}
+      %th.govuk-table__header{scope: 'col'}
         = t('cookies.section_functional.table.heading_two')
-      %th.govuk-table__header{scope: "col"}
+      %th.govuk-table__header{scope: 'col'}
         = t('cookies.section_functional.table.heading_three')
   %tbody.govuk-table__body
     %tr.govuk-table__row
@@ -77,11 +77,11 @@
     = t('cookies.section_analytics.table.caption')
   %thead.govuk-table__head
     %tr.govuk-table__row
-      %th.govuk-table__header{scope: "col"}
+      %th.govuk-table__header{scope: 'col'}
         = t('cookies.section_analytics.table.heading_one')
-      %th.govuk-table__header{scope: "col"}
+      %th.govuk-table__header{scope: 'col'}
         = t('cookies.section_analytics.table.heading_two')
-      %th.govuk-table__header{scope: "col"}
+      %th.govuk-table__header{scope: 'col'}
         = t('cookies.section_analytics.table.heading_three')
   %tbody.govuk-table__body
     %tr.govuk-table__row
