rename cookie and amend cookie details information

--- a/app/views/cookies/cookie_details.html.haml
+++ b/app/views/cookies/cookie_details.html.haml
@@ -27,13 +27,6 @@
         = t('cookies.section_necessary.table.row_one_b')
       %td.govuk-table__cell
         = t('cookies.section_necessary.table.row_one_c')
-    %tr.govuk-table__row
-      %td.govuk-table__cell
-        = t('cookies.section_necessary.table.row_two_a')
-      %td.govuk-table__cell
-        = t('cookies.section_necessary.table.row_two_b')
-      %td.govuk-table__cell
-        = t('cookies.section_necessary.table.row_two_c')
 
 %h2.govuk-heading-l= t('cookies.section_functional.section_heading')
 
@@ -58,6 +51,20 @@
         = t('cookies.section_functional.table.row_one_b')
       %td.govuk-table__cell.app-no-wrap
         = t('cookies.section_functional.table.row_one_c')
+    %tr.govuk-table__row
+      %td.govuk-table__cell
+        = t('cookies.section_functional.table.row_two_a')
+      %td.govuk-table__cell
+        = t('cookies.section_functional.table.row_two_b')
+      %td.govuk-table__cell.app-no-wrap
+        = t('cookies.section_functional.table.row_two_c')
+    %tr.govuk-table__row
+      %td.govuk-table__cell
+        = t('cookies.section_functional.table.row_three_a')
+      %td.govuk-table__cell
+        = t('cookies.section_functional.table.row_three_b')
+      %td.govuk-table__cell.app-no-wrap
+        = t('cookies.section_functional.table.row_three_c')
 
 %h2.govuk-heading-l= t('cookies.section_analytics.section_heading')
 
