--- a/app/views/cookies/_form.html.haml
+++ b/app/views/cookies/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @cookie, local: true, url: '/cookies/settings', html: {class: 'app-js-only'} do |f|
+= form_for @cookie, local: true, url: cookies_settings_path, html: {class: 'app-js-only'} do |f|
 
   %h2.govuk-heading-l= t('cookie_settings.section_settings.heading')
 
