--- a/app/views/search_filters/_form.html.haml
+++ b/app/views/search_filters/_form.html.haml
@@ -1,4 +1,4 @@
-= form_with model: @search_filter, local: true do |f|
+= form_with model: @search_filter do |f|
   = f.govuk_error_summary
 
   = f.govuk_collection_radio_buttons :id,
