--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,4 +1,4 @@
-= form_with model: @user, local: true do |f|
+= form_with model: @user do |f|
   = f.govuk_error_summary
 
   = f.govuk_text_field(:first_name,
