--- a/app/views/defendants/_form.html.haml
+++ b/app/views/defendants/_form.html.haml
@@ -1,4 +1,4 @@
-= form_with(model: @unlink_attempt, url: defendant_path(@defendant.id), local: true, method: 'patch') do |f|
+= form_with(model: @unlink_attempt, url: defendant_path(@defendant.id), method: 'patch') do |f|
   = f.govuk_error_summary
 
   = render 'defendants/defendant'
