--- a/app/views/laa_references/_form.html.haml
+++ b/app/views/laa_references/_form.html.haml
@@ -1,4 +1,4 @@
-= form_with(model: @link_attempt, url: '/laa_references', local: true) do |f|
+= form_with(model: @link_attempt, url: '/laa_references') do |f|
   = f.govuk_error_summary
 
   = render 'defendants/defendant'
