--- a/app/views/layouts/_google_analytics.html.haml
+++ b/app/views/layouts/_google_analytics.html.haml
@@ -14,5 +14,6 @@
     }
     gtag('js', new Date())
     gtag('config', `${googleTrackingID}`, {
-      anonymize_ip: true
+      anonymize_ip: true,
+      siteSpeedSampleRate: 100
     })
