Fix property name for sample rate as was incorrect

--- a/app/views/layouts/_google_analytics.html.haml
+++ b/app/views/layouts/_google_analytics.html.haml
@@ -15,5 +15,5 @@
     gtag('js', new Date())
     gtag('config', `${googleTrackingID}`, {
       anonymize_ip: true,
-      siteSpeedSampleRate: 100
+      site_speed_sample_rate: 100
     })
