Set commit attribute to button for linking with no MAAT ID
`govuk_submit` method now generates a <button> instead of <input>, which
breaks our feature tests for unlinking MAAT IDs as it no longer provides
a commit attribute and value. This explicitly passes them to the method so
that the attribute is reinstated and added to the <button>.

--- a/app/views/laa_references/_form.html.haml
+++ b/app/views/laa_references/_form.html.haml
@@ -17,4 +17,4 @@
 
   = govuk_detail(t('laa_reference.missing_maat_id.label')) do
     %p.govuk-details__details-text=t('laa_reference.missing_maat_id.description')
-    = f.govuk_submit(t('laa_reference.missing_maat_id.submit'), secondary: true)
+    = f.govuk_submit(t('laa_reference.missing_maat_id.submit'), secondary: true, name: 'commit', value: t('laa_reference.missing_maat_id.submit'))
