--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -4,12 +4,14 @@
 
 = render partial: 'listing_info', locals: { hearing: @hearing, hearing_day: @hearing_day }
 
-= render partial: 'court_applications', locals: { hearing: @hearing }
-
 = render partial: 'attendees', locals: { hearing: @hearing }
 
 - if @hearing.hearing_events
   = render partial: 'hearing_events', locals: { hearing: @hearing, hearing_day: @hearing_day }
+
+= render partial: 'judicial_results', locals: { hearing: @hearing }
+
+= render partial: 'court_applications', locals: { hearing: @hearing }
 
 - if Rails.configuration.x.display_raw_responses
   = render partial: 'raw_response', locals: { hearing: @hearing }
