Applied cookie banner body styling directly to tag as it is no longer automatically applied by component Updated attributes for main-content skip link for enhanced screen reader capability

--- a/app/views/layouts/_cookie_banner.html.haml
+++ b/app/views/layouts/_cookie_banner.html.haml
@@ -6,9 +6,9 @@
           %h2.govuk-cookie-banner__heading.govuk-heading-m
             = t('layouts.application.cookies.title')
           .govuk-cookie-banner__content
-            %p
+            %p.govuk-body
               = t('layouts.application.cookies.essential_cookies')
-            %p.app-js-only
+            %p.govuk-body.app-js-only
               = t('layouts.application.cookies.analytics_cookies')
 
       .govuk-button-group.app-js-only
