--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,7 +23,7 @@
   %body.govuk-template__body{ class: app_environment }
     :javascript
       document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
-    %a.govuk-skip-link{href: "#main-content"}
+    %a.govuk-skip-link{href: "#main-content","data-module":"govuk-skip-link"}
       = t('layouts.application.skip_content')
 
     = render partial: 'layouts/cookie_banner'
