Add data attributes for cypress testing of cookies
Add data attributes for cookie banner buttons: accept, reject and settings of cookies

Add data attribute for form submit button on the cookie settings page.

--- a/app/views/cookies/_form.html.haml
+++ b/app/views/cookies/_form.html.haml
@@ -11,4 +11,4 @@
     legend: { text: t('cookie_settings.form.heading') },
     hint: { text: t('cookie_settings.form.hint') }
 
-  = f.govuk_submit t('cookie_settings.form.save_changes')
+  = f.govuk_submit(t('cookie_settings.form.save_changes'), 'data-cy': 'submit-cookies')
