Add cypress tests for hiding cookie banner
Add data attribute to the hide message button in the cookie banner.

Test the hide message functions as expected.

--- a/app/views/layouts/_cookie_banner.html.haml
+++ b/app/views/layouts/_cookie_banner.html.haml
@@ -35,5 +35,5 @@
               = @analytics_cookies_accepted ? t('layouts.application.cookies.confirmation_accept') : t('layouts.application.cookies.confirmation_reject') 
               = t('layouts.application.cookies.confirmation_link_to_settings_html', href: cookies_settings_path).html_safe
       .govuk-button-group
-        %a.govuk-button{'data-module': 'govuk-button', type: 'button', draggable: 'false', 'href': '?'}
+        %a.govuk-button{'data-module': 'govuk-button', type: 'button', draggable: 'false', 'href': '?', 'data-cy': 'hide_message'}
           = t('layouts.application.cookies.hide_message')
