Update heading size and section spacing

--- a/app/views/prosecution_cases/_defendants.html.haml
+++ b/app/views/prosecution_cases/_defendants.html.haml
@@ -1,6 +1,6 @@
-%h2.govuk-heading-m
+%h2.govuk-heading-l
   = t('search.result.defendant.heading')
-%table.govuk-table
+%table.govuk-table{:class => "govuk-!-margin-bottom-9"}
   %caption.govuk-table__caption.govuk-visually-hidden
     = t('search.result.defendant.caption')
   %thead.govuk-table__head
