--- a/app/views/defendants/_defendant.html.haml
+++ b/app/views/defendants/_defendant.html.haml
@@ -1,4 +1,4 @@
-%table.govuk-table
+%table.govuk-table{:class => "govuk-!-margin-bottom-9"}
   %caption.govuk-table__caption.govuk-visually-hidden
     = t('search.result.defendant.caption')
   %tbody.govuk-table__body
