--- a/app/views/defendants/_offences.html.haml
+++ b/app/views/defendants/_offences.html.haml
@@ -1,7 +1,7 @@
-.govuk-heading-m
+.govuk-heading-l
   = t('search.result.offence.heading')
 
-%table.govuk-table
+%table.govuk-table{:class => "govuk-!-margin-bottom-9"}
   %caption.govuk-table__caption.govuk-visually-hidden
     = t('search.result.offence.caption')
   %thead.govuk-table__head
