--- a/app/views/hearings/_court_applications.html.haml
+++ b/app/views/hearings/_court_applications.html.haml
@@ -1,4 +1,4 @@
-%h2.govuk-heading-m
+%h2.govuk-heading-l
   = t('hearings.show.court_applications.heading')
 - if hearing&.court_applications.present?
   .govuk-accordion{:data => {:module => "govuk-accordion"}, :id => "accordion-" + hearing.id}
