--- a/app/views/searches/_results_header.html.haml
+++ b/app/views/searches/_results_header.html.haml
@@ -1,4 +1,4 @@
-.govuk-heading-m
+.govuk-heading-l
   - if @dob
     = t('search.result.heading_with_dob', term: @term, dob: l(@dob, format: :long))
   - else
