Update defendant page

--- a/app/views/defendants/_offences.html.haml
+++ b/app/views/defendants/_offences.html.haml
@@ -1,4 +1,4 @@
-.govuk-heading-l
+.govuk-heading-l{:class => "govuk-!-margin-bottom-4"}
   = t('search.result.offence.heading')
 
 %table.govuk-table{:class => "govuk-!-margin-bottom-9"}
