--- a/app/views/prosecution_cases/_defendants.html.haml
+++ b/app/views/prosecution_cases/_defendants.html.haml
@@ -1,4 +1,4 @@
-%h2.govuk-heading-l
+%h2.govuk-heading-l{:class => "govuk-!-margin-bottom-4"}
   = t('search.result.defendant.heading')
 %table.govuk-table{:class => "govuk-!-margin-bottom-9"}
   %caption.govuk-table__caption.govuk-visually-hidden
