Update to hearings page

--- a/app/views/hearings/_attendees.html.haml
+++ b/app/views/hearings/_attendees.html.haml
@@ -1,4 +1,4 @@
-%h2.govuk-heading-l
+%h2.govuk-heading-l{:class => "govuk-!-margin-bottom-4"}
   = t('hearings.show.attendees.heading')
 
 %table.govuk-table{:class => "govuk-!-margin-bottom-9"}
