--- a/app/views/hearings/_listing_info.html.haml
+++ b/app/views/hearings/_listing_info.html.haml
@@ -1,4 +1,4 @@
-%table.govuk-table
+%table.govuk-table{:class => "govuk-!-margin-bottom-9"}
   %caption.govuk-table__caption.govuk-visually-hidden
     = t('generic.hearing_day')
   %tbody.govuk-table__body
