--- a/app/views/hearings/_attendees.html.haml
+++ b/app/views/hearings/_attendees.html.haml
@@ -1,7 +1,7 @@
-%h2.govuk-heading-m
+%h2.govuk-heading-l{:class => "govuk-!-margin-bottom-4"}
   = t('hearings.show.attendees.heading')
 
-%table.govuk-table
+%table.govuk-table{:class => "govuk-!-margin-bottom-9"}
   %caption.govuk-table__caption.govuk-visually-hidden
     = t('hearings.show.attendees.caption')
   %tbody.govuk-table__body
