--- a/app/views/prosecution_cases/_hearing_summaries.html.haml
+++ b/app/views/prosecution_cases/_hearing_summaries.html.haml
@@ -1,6 +1,6 @@
-%h2.govuk-heading-m
+%h2.govuk-heading-l{:class => "govuk-!-margin-bottom-4"}
   = t('search.result.hearing.heading')
-%table.govuk-table.app-sortable-table
+%table.govuk-table.app-sortable-table{:class => "govuk-!-margin-bottom-9"}
   %caption.govuk-table__caption.govuk-visually-hidden
     = t('search.result.hearing.caption')
   %thead.govuk-table__head
