--- a/app/views/layouts/_flashes.html.haml
+++ b/app/views/layouts/_flashes.html.haml
@@ -1,19 +1,39 @@
 - flash.each do |key, value|
-  - case key
-    - when 'alert'
-      .govuk-error-summary
-        .govuk-error-summary__title
-          = value
-        / .govuk-error-summary__body
-        .govuk-error-message
-
-    - when 'notice'
-      .lcdui-notice-summary
+  - if value.is_a?(String)
+    - case key
+      - when 'alert'
         .govuk-error-summary
           .govuk-error-summary__title
-            = value
-          / .govuk-error-summary__body
+            = sanitize(value)
           .govuk-error-message
 
-    - when 'success'
-      = govuk_notification_banner(value.html_safe, key.capitalize)
+      - when 'notice'
+        .lcdui-notice-summary
+          .govuk-error-summary
+            .govuk-error-summary__title
+              = sanitize(value)
+            .govuk-error-message
+
+      - when 'success'
+        = govuk_notification_banner(sanitize(value), key.capitalize)
+  
+  - if value.is_a?(Hash)  
+    - case key
+      - when 'alert'
+        .govuk-error-summary
+          .govuk-error-summary__title
+            = sanitize(value[:title])
+          - if value[:message]
+            .govuk-error-summary__body
+              = sanitize(value[:message])
+          .govuk-error-message
+
+      - when 'notice'
+        .lcdui-notice-summary
+          .govuk-error-summary
+            .govuk-error-summary__title
+            = sanitize(value[:title])
+          - if value[:message]
+            .govuk-error-summary__body
+              = sanitize(value[:message])
+          .govuk-error-message
