--- a/app/views/hearings/_attendees.html.haml
+++ b/app/views/hearings/_attendees.html.haml
@@ -1,27 +1,19 @@
-%h2.govuk-heading-l{:class => "govuk-!-margin-bottom-4"}
-  = t('hearings.show.attendees.heading')
-
-%table.govuk-table{:class => "govuk-!-margin-bottom-9"}
-  %caption.govuk-table__caption.govuk-visually-hidden
-    = t('hearings.show.attendees.caption')
-  %tbody.govuk-table__body
-    %tr.govuk-table__row
-      %th.govuk-table__header{ scope: 'row' }
-        = t('hearings.show.attendees.defendants')
-      %td.govuk-table__cell
-        = hearing.defendant_name_list
-    %tr.govuk-table__row
-      %th.govuk-table__header{ scope: 'row' }
-        = t('hearings.show.attendees.defence')
-      %td.govuk-table__cell
-        = hearing.provider_list
-    %tr.govuk-table__row
-      %th.govuk-table__header{ scope: 'row' }
-        = t('hearings.show.attendees.prosecution')
-      %td.govuk-table__cell
-        = hearing.prosecution_advocate_name_list
-    %tr.govuk-table__row
-      %th.govuk-table__header{ scope: 'row' }
-        = t('hearings.show.attendees.judges')
-      %td.govuk-table__cell
-        = hearing.judge_name_list
+%div{:class => "govuk-!-margin-bottom-9"}
+  %h2.govuk-heading-l
+    = t('hearings.show.attendees.heading')
+  .govuk-heading-s
+    = t('hearings.show.attendees.defendants')
+  %p.govuk-body
+    = hearing.defendant_name_list
+  .govuk-heading-s
+    = t('hearings.show.attendees.defence')
+  %p.govuk-body
+    = hearing.provider_list
+  .govuk-heading-s
+    = t('hearings.show.attendees.prosecution')
+  %p.govuk-body
+    = hearing.prosecution_advocate_name_list
+  .govuk-heading-s
+    = t('hearings.show.attendees.judges')
+  %p.govuk-body
+    = hearing.judge_name_list
