--- a/app/views/hearings/_listing_info.html.haml
+++ b/app/views/hearings/_listing_info.html.haml
@@ -1,26 +1,15 @@
-%table.govuk-table{:class => "govuk-!-margin-bottom-9"}
-  %caption.govuk-table__caption.govuk-visually-hidden
-    = t('generic.hearing_day')
-  %tbody.govuk-table__body
-    %tr.govuk-table__row
-      %th.govuk-table__header{ scope: 'row' }
-        = t('hearings.show.hearing_type')
-      %td.govuk-table__cell
-        = hearing&.hearing_type || t('generic.not_available')
-    %tr.govuk-table__row
-      %th.govuk-table__header{ scope: 'row' }
-        = t('hearings.show.court')
-      %td.govuk-table__cell
-        = hearing&.court_name || t('generic.not_available')
-    %tr.govuk-table__row
-      %th.govuk-table__header{ scope: 'row' }
-        = t('hearings.show.time_listed')
-      %td.govuk-table__cell
-        = hearing_day&.strftime('%H:%M') || t('generic.not_available')
-
-    - if hearing.cracked_ineffective_trial
-      %tr.govuk-table__row
-        %th.govuk-table__header{ scope: 'row' }
-          = t('hearings.show.result')
-        %td.govuk-table__cell
-          = hearing.cracked_ineffective_trial.description_sentence
+%div{:class => "govuk-!-margin-bottom-9"}
+  .govuk-heading-l
+    = t('generic.detail')
+  .govuk-heading-s
+    = t('hearings.show.hearing_type')
+  %p.govuk-body
+    = hearing&.hearing_type || t('generic.not_available')
+  .govuk-heading-s
+    = t('hearings.show.court')
+  %p.govuk-body
+    = hearing&.court_name || t('generic.not_available')
+  .govuk-heading-s
+    = t('hearings.show.time_listed')
+  %p.govuk-body
+    = hearing_day&.strftime('%H:%M') || t('generic.not_available')
