--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -2,12 +2,14 @@
 
 = render partial: 'pagination', locals: { paginator: @paginator }
 
-= render partial: 'listing_info', locals: { hearing: @hearing, hearing_day: @hearing_day }
+.govuk-grid-row
+  .govuk-grid-column-one-third
+    = render partial: 'listing_info', locals: { hearing: @hearing, hearing_day: @hearing_day }
 
-= render partial: 'attendees', locals: { hearing: @hearing }
-
-- if @hearing.hearing_events
-  = render partial: 'hearing_events', locals: { hearing: @hearing, hearing_day: @hearing_day }
+    = render partial: 'attendees', locals: { hearing: @hearing }
+  .govuk-grid-column-two-thirds
+    - if @hearing.hearing_events
+      = render partial: 'hearing_events', locals: { hearing: @hearing, hearing_day: @hearing_day }
 
 - if Rails.configuration.x.display_raw_responses
   = render partial: 'raw_response', locals: { hearing: @hearing }
