--- a/app/views/hearings/_hearing_events.html.haml
+++ b/app/views/hearings/_hearing_events.html.haml
@@ -1,3 +1,5 @@
+.govuk-heading-l
+  = t('hearings.show.events.title')
 %table.govuk-table
   %caption.govuk-table__caption.govuk-visually-hidden
     = t('hearings.show.events.caption')
