--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -4,7 +4,7 @@
 
 .govuk-grid-row
   .govuk-grid-column-one-third
-    = render partial: 'listing_info', locals: { hearing: @hearing, hearing_day: @hearing_day }
+    = render partial: 'details', locals: { hearing: @hearing, hearing_day: @hearing_day }
 
     = render partial: 'attendees', locals: { hearing: @hearing }
   .govuk-grid-column-two-thirds
