Refactoring grid layout pt 1 Moved 2 thirds grid layout from application.html.haml so that we have the choice in using a 2 thirds layout vs other choices (e.g. 1 third, 2 thirds) without issues arising from nested grids
Pages handled so far:
Homepage/Login
Forgot Password page
Password unlock instructions
Contacts page
Search Page
Search form pages (URN, ASN/NI and Name/DoB)
Search results page
Prosecution case page

Pending:
Feedback confirmation (need to test in dev)
User management pages
Defendants page

--- a/app/views/feedback/new.html.haml
+++ b/app/views/feedback/new.html.haml
@@ -1,3 +1,6 @@
 = govuk_page_title(t('feedback.page_title'))
 
-= render 'form'
+.govuk-grid-row
+	.govuk-grid-column-two-thirds
+		= render 'form'
+	
