--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,9 +1,11 @@
 = govuk_page_title(t('devise.passwords.user.form.reset.page_title'))
 
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-  = render "devise/shared/error_messages", resource: resource
+.govuk-grid-row
+  .govuk-grid-column-two-thirds
+    = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+      = render "devise/shared/error_messages", resource: resource
 
-  = f.govuk_email_field(:email, label: { text: 'Email' }, autofocus: true, autocomplete: 'email')
-  = f.govuk_submit(t('devise.passwords.user.form.reset.submit'))
+      = f.govuk_email_field(:email, label: { text: 'Email' }, autofocus: true, autocomplete: 'email')
+      = f.govuk_submit(t('devise.passwords.user.form.reset.submit'))
 
-= render "devise/shared/links"
+    = render "devise/shared/links"
