Wrap cookie-banner__content text in govuk-body instead of p tag

--- a/app/views/layouts/_cookie_banner.html.haml
+++ b/app/views/layouts/_cookie_banner.html.haml
@@ -31,7 +31,7 @@
       .govuk-grid-row
         .govuk-grid-column-two-thirds
           .govuk-cookie-banner__content
-            %p
+            %p.govuk-body
               = @analytics_cookies_accepted ? t('layouts.application.cookies.confirmation_accept') : t('layouts.application.cookies.confirmation_reject') 
               = t('layouts.application.cookies.confirmation_link_to_settings_html', href: cookies_settings_path).html_safe
       .govuk-button-group
