--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,7 +42,7 @@
     .govuk-width-container
       %div{role:"complementary"}
         = render 'layouts/phase_banner'
-      %div{role:"navigation"}
+      %div{role:"navigation","aria-label" => "Navigate Case"}
         = render_breadcrumbs(builder: govuk_breadcrumb_builder)
 
       %main#main-content.govuk-main-wrapper{role: "main"}
