Applied role and aria-labels directly to components Applied complementary role directly to the phase banner partial Applied navigation role and aria-label directly to breadcrumbs via the breadcrumb builder library

--- a/app/views/layouts/_phase_banner.html.haml
+++ b/app/views/layouts/_phase_banner.html.haml
@@ -1,4 +1,4 @@
-.govuk-phase-banner{ class: ENV['ENV'] }
+.govuk-phase-banner{ class: ENV['ENV'], role: "complementary" }
   %p.govuk-phase-banner__content
     %strong.govuk-tag.govuk-phase-banner__content__tag
       - if ENV['ENV'] == 'production'
