--- a/app/views/hearings/_hearing_events.html.haml
+++ b/app/views/hearings/_hearing_events.html.haml
@@ -1,4 +1,6 @@
-%table.govuk-table
+.govuk-heading-l
+  = t('hearings.show.events.title')
+%table.govuk-table{:class => "govuk-!-margin-bottom-9"}
   %caption.govuk-table__caption.govuk-visually-hidden
     = t('hearings.show.events.caption')
   %thead.govuk-table__head
