--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -1,5 +1,5 @@
-%nav.govuk-header__navigation{"aria-label" => t('layouts.application.header.navigation.top_navigation')}
-  %button.govuk-header__menu-button.govuk-js-header-toggle{"aria-controls" => "navigation", "aria-label" => t('layouts.application.header.navigation.show_hide'), type: "button"}
+%nav.govuk-header__navigation{"aria-label": t('layouts.application.header.navigation.top_navigation'), role: "navigation"}
+  %button.govuk-header__menu-button.govuk-js-header-toggle{"aria-controls": "navigation", "aria-label": t('layouts.application.header.navigation.show_hide'), type: "button"}
     = t('layouts.application.header.navigation.menu')
   %ul#navigation.govuk-header__navigation-list
     %li.govuk-header__navigation-item.govuk-header__navigation-item--active
