--- a/app/views/layouts/_cookie_banner.html.haml
+++ b/app/views/layouts/_cookie_banner.html.haml
@@ -1,5 +1,5 @@
 - unless @cookies_preferences_set
-  .app-cookie-banner.app-cookie-banner.govuk-cookie-banner{'aria-label': 'Cookies on View Court Data', role: 'region', data: { module: 'app-cookie-banner', nosnippet: ''}}
+  .app-cookie-banner.app-cookie-banner.govuk-cookie-banner{'aria-label': 'Cookies on View Court Data', id: "removable", role: 'region', data: { module: 'app-cookie-banner', nosnippet: ''}}
     .govuk-cookie-banner__message.govuk-width-container
       .govuk-grid-row
         .govuk-grid-column-two-thirds
@@ -12,9 +12,9 @@
               = t('layouts.application.cookies.analytics_cookies')
 
       .govuk-button-group.app-js-only
-        %a.govuk-button{'data-accept-cookies': 'true', 'data-module': 'govuk-button', name: 'cookies', type: 'button',
-                        value: 'accept', 'data-cy': 'accept_cookies',
-                        'href': '?analytics_cookies_set=true&show_confirm_banner=true'}
+        %a{'href': '/something'} something
+        %a.govuk-button{'data-accept-cookies': 'true', 'data-module': 'govuk-button', name: 'cookies', type: 'button', value: 'accept',
+          'href': '?analytics_cookies_set=true&show_confirm_banner=true'}
           = t('layouts.application.cookies.accept_cookies')
         %a.govuk-button{'data-reject-cookies': 'true', 'data-module': 'govuk-button', name: 'cookies', type: 'button',
                         value: 'reject', 'data-cy': 'reject_cookies',
