Setup turbo to work with test elements

--- a/app/views/layouts/_something.html.haml
+++ b/app/views/layouts/_something.html.haml
@@ -1,1 +1,2 @@
-%turbo-frame{:id => "something", :action => "remove", :target => "removable"}
+%turbo-stream{:id => "something", :action => "remove", :target => "removable"}
+%h2 this is the partial
