--- a/app/views/layouts/_something.html.haml
+++ b/app/views/layouts/_something.html.haml
@@ -1,2 +1,14 @@
-%turbo-stream{:id => "something", :action => "remove", :target => "removable"}
-%h2 this is the partial
+%turbo-frame{id: "removable"}
+  %turbo-stream{:action => "replace", :target => "removable"}
+  %h2 this is the partial
+  .app-cookie-banner.app-cookie-banner.govuk-cookie-banner{'aria-label': 'Cookies on View Court Data', role: 'region', data: { module: 'app-cookie-banner', nosnippet: ''}}
+    .govuk-cookie-banner__message.govuk-width-container
+      .govuk-grid-row
+        .govuk-grid-column-two-thirds
+          .govuk-cookie-banner__content
+            %p.govuk-body
+              = @analytics_cookies_accepted ? t('layouts.application.cookies.confirmation_accept') : t('layouts.application.cookies.confirmation_reject') 
+              = t('layouts.application.cookies.confirmation_link_to_settings_html', href: cookies_settings_path).html_safe
+      .govuk-button-group
+        %a.govuk-button{'data-module': 'govuk-button', type: 'button', draggable: 'false', 'href': '?'}
+          = t('layouts.application.cookies.hide_message')
