Remove unneeded var for confirmation banner

--- a/app/views/layouts/_something.html.haml
+++ b/app/views/layouts/_something.html.haml
@@ -12,3 +12,4 @@
       .govuk-button-group
         %a.govuk-button{'data-module': 'govuk-button', type: 'button', draggable: 'false', 'href': '?'}
           = t('layouts.application.cookies.hide_message')
+  %turbo-stream{:action => "replace", :target => "removable"}
