--- a/app/views/layouts/_something.html.haml
+++ b/app/views/layouts/_something.html.haml
@@ -1,6 +1,4 @@
-%turbo-frame{id: "removable"}
-  %turbo-stream{:action => "replace", :target => "removable"}
-  %h2 this is the partial
+%turbo-frame#removable
   .app-cookie-banner.app-cookie-banner.govuk-cookie-banner{'aria-label': 'Cookies on View Court Data', role: 'region', data: { module: 'app-cookie-banner', nosnippet: ''}}
     .govuk-cookie-banner__message.govuk-width-container
       .govuk-grid-row
