Update to address Rubocop issues

--- a/app/views/layouts/_google_analytics.html.haml
+++ b/app/views/layouts/_google_analytics.html.haml
@@ -1,6 +1,6 @@
 - if @analytics_cookies_accepted
   :javascript
-    let googleTrackingID = "#{ENV['GA_TRACKING_ID']}"
+    let googleTrackingID = "#{ENV.fetch('GA_TRACKING_ID', nil)}"
 
     const analyticsScriptTag = document.createElement('script')
     analyticsScriptTag.async = ''
