Add hearing events from V2 if flag enabled

--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -11,12 +11,16 @@
     = render partial: 'attendees', locals: { hearing: @hearing }
 
   .govuk-grid-column-two-thirds
-    - if @hearing.hearing_events
-      = render partial: 'hearing_events', locals: { hearing: @hearing, hearing_day: @hearing_day }
-    
+    - unless Feature.enabled?(:hearing_events)
+      - if @hearing.hearing_events
+        = render partial: 'hearing_events', locals: { hearing: @hearing, hearing_day: @hearing_day }
+    - else
+      - if @hearing_events
+        = render partial: 'hearing_events_v2', locals: { hearing_events: @hearing_events, hearing_day: @hearing_day }
+
     - if @hearing.cracked_ineffective_trial
       = render partial: 'hearing_result', locals: { hearing: @hearing }
-    
+
     = render partial: 'court_applications', locals: { hearing: @hearing }
 
 - if Rails.configuration.x.display_raw_responses
