--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -6,9 +6,15 @@
 
 .govuk-grid-row
   .govuk-grid-column-one-third
-    = render partial: 'details', locals: { hearing: @hearing, hearing_day: @hearing_day }
+    - unless Feature.enabled?(:hearing_data)
+      = render partial: 'details', locals: { hearing: @hearing, hearing_day: @hearing_day }
+    - else
+      = render partial: 'details_v2', locals: { hearing: @hearing, hearing_day: @hearing_day }
 
-    = render partial: 'attendees', locals: { hearing: @hearing }
+    - unless Feature.enabled?(:hearing_data)
+      = render partial: 'attendees', locals: { hearing: @hearing }
+    - else
+      = render partial: 'attendees_v2', locals: { hearing: @hearing }
 
   .govuk-grid-column-two-thirds
     - unless Feature.enabled?(:hearing_events)
@@ -18,10 +24,10 @@
       - if @hearing_events
         = render partial: 'hearing_events_v2', locals: { hearing_events: @hearing_events, hearing_day: @hearing_day }
 
-    - if @hearing.cracked_ineffective_trial
-      = render partial: 'hearing_result', locals: { hearing: @hearing }
-
-    = render partial: 'court_applications', locals: { hearing: @hearing }
-
-- if Rails.configuration.x.display_raw_responses
-  = render partial: 'raw_response', locals: { hearing: @hearing }
+-#     - if @hearing.cracked_ineffective_trial
+-#       = render partial: 'hearing_result', locals: { hearing: @hearing }
+-#
+-#     = render partial: 'court_applications', locals: { hearing: @hearing }
+-#
+-# - if Rails.configuration.x.display_raw_responses
+-#   = render partial: 'raw_response', locals: { hearing: @hearing }
