--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -24,10 +24,19 @@
       - if @hearing_events
         = render partial: 'hearing_events_v2', locals: { hearing_events: @hearing_events, hearing_day: @hearing_day }
 
--#     - if @hearing.cracked_ineffective_trial
--#       = render partial: 'hearing_result', locals: { hearing: @hearing }
--#
--#     = render partial: 'court_applications', locals: { hearing: @hearing }
--#
--# - if Rails.configuration.x.display_raw_responses
--#   = render partial: 'raw_response', locals: { hearing: @hearing }
+    - unless Feature.enabled?(:hearing_events)
+      - if @hearing.cracked_ineffective_trial
+        = render partial: 'hearing_result', locals: { hearing: @hearing }
+    - else
+      - if @hearing.hearing.cracked_ineffective_trial.description
+        = render partial: 'hearing_result_v2', locals: { hearing: @hearing }
+    - unless Feature.enabled?(:hearing_events)
+      = render partial: 'court_applications', locals: { hearing: @hearing }
+    - else
+      = render partial: 'court_applications_v2', locals: { hearing: @hearing }
+
+- if Rails.configuration.x.display_raw_responses
+  - unless Feature.enabled?(:hearing_events)
+    = render partial: 'raw_response', locals: { hearing: @hearing }
+  - else
+    = render partial: 'raw_response_v2', locals: { hearing: @hearing, hearing_events: @hearing_events}
